force-app/main/default/objects/BGBK__Bill__c/fields/BGBK__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Balance_Due__c</fullName>
    <formula>BGBK__Total_Fees__c  -  BGBK__Total_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>