force-app/main/default/objects/BGBK__Bill__c/fields/BGBK__Recipient2__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Recipient2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Receiver of Invoice</description>
    <label>Recipient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>