force-app/main/default/objects/BGBK__Bill__c/fields/BGBK__Recipient__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>NOT IN USE</inlineHelpText>
    <label>Recipient DO NOT USE</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>