force-app/main/default/objects/BGBK__Bill__c/fields/BGBK__Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Total_Payments__c</fullName>
    <label>Total Payments</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>