force-app/main/default/objects/BGBK__Bill__c/validationRules/BGBK__Can_not_change_from_Voided_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Can_not_change_from_Voided_Invoice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(BGBK__Status__c), ISPICKVAL(PRIORVALUE(BGBK__Status__c), 'Voided'))</errorConditionFormula>
    <errorMessage>Can not change the Status of a Voided Invoice</errorMessage>
</ValidationRule>