force-app/main/default/objects/BGBK__Bill__c/validationRules/BGBK__Can_not_Void_a_Paid_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Can_not_Void_a_Paid_Invoice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(BGBK__Status__c), ISPICKVAL(BGBK__Status__c, 'Voided'), ISPICKVAL(PRIORVALUE(BGBK__Status__c), 'Paid'))</errorConditionFormula>
    <errorMessage>Can not Void a Paid Invoice</errorMessage>
</ValidationRule>